# NazareAI-Developer

./: README.md  pyproject.toml  setup.py  structure.md  system-overview.md
src/: __init__.py  cli.py  main.py
src/llm/: __init__.py  router.py
src/llm/providers/: base_provider.py  openrouter.py
src/utils/: logger.py
src/worker/: code_generator.py
src/worker/analyzer/: base_analyzer.py  javascript.py  python.py  rust.py  solidity.py  style.py  typescript.py
tests/: conftest.py
tests/test_llm/: test_router.py
tests/test_utils/: test_logger.py
tests/test_worker/: test_code_generator.py
